minor clean up on crypto index

--- a/crypto/index.html
+++ b/crypto/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto Space</title>
+    <title>Crypto Space - Oxl☰yrd</title>
     <style>
         img.icon {
             width: 32px;
@@ -27,13 +27,13 @@
         <li>https://ihostmn.com/</li>
     </ul>
 
-    <!-- Coingecko widget -->
+    <!-- Coingecko widget 
     <script src="https://widgets.coingecko.com/coingecko-coin-list-widget.js"></script>
     <coingecko-coin-list-widget
         coin-ids="bitcoin,ethereum,chargedefi-charge,chargedefi-static,looksrare,liquiddriver,spiritswap,protofi"
         currency="usd" locale="en">
     </coingecko-coin-list-widget>
-
+-->
     <!--
     <script src="https://widgets.coingecko.com/coingecko-coin-price-marquee-widget.js"></script>
     <coingecko-coin-price-marquee-widget
@@ -61,7 +61,7 @@
                 Prices</a>&nbsp;by Coinlib
         </div>
     </div>
--->
+
 
 
     <script type="text/javascript" src="https://files.coinmarketcap.com/static/widget/currency.js"></script>
@@ -74,7 +74,7 @@
             data-ticker="true" data-rank="true" data-marketcap="false" data-volume="true" data-statsticker="true"
             data-stats="USD"></div>
     </div>
-
+-->
 
 </body>
 
