--- a/crypto/index.html
+++ b/crypto/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
+
     <title>Crypto Space - Oxl☰yrd</title>
     <style>
         img.icon {
-            width: 32px;
+            width: 20px;
             padding-right: 10px
         }
 
@@ -19,14 +21,27 @@
 </head>
 
 <body>
-    <h1>Crypto Space</h1>
-    <h2>Masternodes</h2>
-    <ul>
-        <li><img class="icon" src="https://yieldnodes.com/favicon.ico" /><a
-                href="https://yieldnodes.com/">Yieldnodes</a></li>
-        <li>https://ihostmn.com/</li>
-    </ul>
+    <header>
+        <a href="index.html" class="logo"><img width="40" style="vertical-align: middle;" src="logo.png"></a>
+        <a href="index.html" class="button">Home</a>
+        <a href="watch.html" class="button">Watch List</a>
+    </header>
 
+    <h1>Crypto Space</h1>
+    <div class="row">
+        <div class="card">
+            <h3>Masternodes</h3>
+            <div class="section">
+                <ul>
+                    <li><img class="icon" src="https://yieldnodes.com/favicon.ico"><a
+                            href="https://yieldnodes.com/">Yieldnodes</a></li>
+                    <li><img class="icon" src="https://api.statvoo.com/favicon/?url=ihostmn.com"><a
+                            href="https://ihostmn.com/">ihostmn</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
     <!-- Coingecko widget 
     <script src="https://widgets.coingecko.com/coingecko-coin-list-widget.js"></script>
     <coingecko-coin-list-widget
