--- a/crypto/watch.html
+++ b/crypto/watch.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watch List - Oxl☰yrd</title>
+    <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
 
     <script src="https://widgets.coingecko.com/coingecko-coin-list-widget.js"></script>
@@ -17,7 +19,9 @@
         .w-title {
             font-size: larger;
             font-style: bold;
-            padding: 0 20px;
+            vertical-align: middle;
+            height: 100%;
+
         }
 
         .w-section {
@@ -173,7 +177,7 @@
         <a href="index.html" class="button">Home</a>
     </header>
 
-    <span class="w-title">Watch List</span>
+    <h1>Watch List</h1>
     <button id="reloadbutton"><img width="20" style="vertical-align: middle;"
             src="https://img.icons8.com/external-becris-lineal-becris/64/000000/external-refresh-mintab-for-ios-becris-lineal-becris.png" />
         Reload</button>
