--- a/crypto/index.html
+++ b/crypto/index.html
@@ -16,6 +16,10 @@
             padding-right: 10px
         }
 
+        .active {
+            background-color: #ddd;
+        }
+
         .coinmarketcap-currency-widget {
             display: inline;
         }
@@ -25,7 +29,7 @@
 <body>
     <header>
         <a href="index.html" class="logo"><img width="40" style="vertical-align: middle;" src="logo.png"></a>
-        <a href="index.html" class="button">Home</a>
+        <button class="active">Home</button>
         <a href="watch.html" class="button">Watch List</a>
     </header>
 
